force-app/main/default/objects/PostalCodeAssignment__c/PostalCodeAssignment__c.object-meta.xml
<CustomObject>
    <description>Maps a postal code to a sales group. Maintained by sales leaders. Source for automatic lead assignment when a lead is created without a sales context.</description>
    <label>Postal Code Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Code Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>