force-app/main/default/objects/PostalCodeAssignment__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>ISO country code. Prepared for internationalization, currently DE.</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>