force-app/main/default/objects/PostalCodeAssignment__c/fields/CustomerGroupKey__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroupKey__c</fullName>
    <description>Business unit. First rollout stage covers food service (22) only.</description>
    <label>Customer Group Key (SAP KDGRP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>77</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>