force-app/main/default/objects/PostalCodeAssignment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active records are evaluated by the assignment logic.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>