force-app/main/default/objects/PostalCodeAssignment__c/fields/IsMyTerritory__c.field-meta.xml
<CustomField>
    <fullName>IsMyTerritory__c</fullName>
    <description>True when the current user is the sales leader of this postal code. Enables a personal list view, because list view filters cannot reference the running user directly.</description>
    <formula>SalesLeader__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Territory</label>
    <type>Checkbox</type>
</CustomField>