force-app/main/default/objects/PostalCodeAssignment__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Unique. Prevents duplicate maintenance and enables upsert via Data Loader.</description>
    <externalId>true</externalId>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>