force-app/main/default/objects/PostalCodeAssignment__c/fields/SalesDistrictKey__c.field-meta.xml
<CustomField>
    <fullName>SalesDistrictKey__c</fullName>
    <description>Derived from the sales group. Used for filtering and list views.</description>
    <label>Sales District Key (SAP BZIRK)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z00001</fullName>
            </value>
            <value>
                <fullName>Z10100</fullName>
            </value>
            <value>
                <fullName>Z10200</fullName>
            </value>
            <value>
                <fullName>Z10300</fullName>
            </value>
            <value>
                <fullName>Z10400</fullName>
            </value>
            <value>
                <fullName>Z10500</fullName>
            </value>
            <value>
                <fullName>Z20100</fullName>
            </value>
            <value>
                <fullName>Z20150</fullName>
            </value>
            <value>
                <fullName>Z20200</fullName>
            </value>
            <value>
                <fullName>Z20250</fullName>
            </value>
            <value>
                <fullName>Z20300</fullName>
            </value>
            <value>
                <fullName>Z20350</fullName>
            </value>
            <value>
                <fullName>Z20400</fullName>
            </value>
            <value>
                <fullName>Z20450</fullName>
            </value>
            <value>
                <fullName>Z20500</fullName>
            </value>
            <value>
                <fullName>Z20550</fullName>
            </value>
            <value>
                <fullName>Z30100</fullName>
            </value>
            <value>
                <fullName>Z30200</fullName>
            </value>
            <value>
                <fullName>Z30300</fullName>
            </value>
            <value>
                <fullName>Z30400</fullName>
            </value>
            <value>
                <fullName>Z40100</fullName>
            </value>
            <value>
                <fullName>Z40200</fullName>
            </value>
            <value>
                <fullName>Z40300</fullName>
            </value>
            <value>
                <fullName>Z40400</fullName>
            </value>
            <value>
                <fullName>Z40500</fullName>
            </value>
            <value>
                <fullName>Z40600</fullName>
            </value>
            <value>
                <fullName>Z40700</fullName>
            </value>
            <value>
                <fullName>Z40800</fullName>
            </value>
            <value>
                <fullName>Z40900</fullName>
            </value>
            <value>
                <fullName>Z70100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>