force-app/main/default/objects/PostalCodeAssignment__c/fields/SalesLeader__c.field-meta.xml
<CustomField>
    <fullName>SalesLeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the maintenance responsibility. Basis for the per sales leader list view.</description>
    <label>Sales Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Postal Code Assignments</relationshipLabel>
    <relationshipName>PostalCodeAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>