force-app/main/default/objects/PostalCodeAssignment__c/fields/SourceColumn__c.field-meta.xml
<CustomField>
    <fullName>SourceColumn__c</fullName>
    <description>Column header from the source spreadsheet the record was loaded from. Kept for traceability of the initial load and to group records that belong to the same sales person before the SAP key is known.</description>
    <label>Source Column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>