force-app/main/default/objects/PostalCodeAssignment__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Supports planned territory realignments.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>