force-app/main/default/objects/PostalCodeAssignment__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Empty means valid indefinitely.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>