force-app/main/default/objects/PostalCodeAssignment__c/listViews/All_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Assignments</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>Region__c</columns>
    <columns>SalesDistrictKey__c</columns>
    <columns>SalesGroupKey__c</columns>
    <columns>SalesLeader__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignments</label>
</ListView>