force-app/main/default/objects/PostalCodeAssignment__c/listViews/My_Territories.listView-meta.xml
<ListView>
    <fullName>My_Territories</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>Region__c</columns>
    <columns>SalesDistrictKey__c</columns>
    <columns>SalesGroupKey__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsMyTerritory__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Territories</label>
</ListView>