force-app/main/default/objects/PostalCodeAssignment__c/listViews/Unassigned_Postal_Codes.listView-meta.xml
<ListView>
    <fullName>Unassigned_Postal_Codes</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>Region__c</columns>
    <columns>SalesLeader__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesGroupKey__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Postal Codes</label>
</ListView>