force-app/main/default/objects/PostalCodeAssignment__c/listViews/Without_Key_By_Source.listView-meta.xml
<ListView>
    <fullName>Without_Key_By_Source</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>SourceColumn__c</columns>
    <columns>SalesLeader__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesGroupKey__c</field>
        <operation>equals</operation>
    </filters>
    <label>Without Key by Source</label>
</ListView>